Fixed contact form alignment, and added banner component in case Shana ever wants to display one

--- a/src/index.css
+++ b/src/index.css
@@ -52,20 +52,40 @@ button {
   border-radius: 0px !important;
 }
 
+.banner {
+  width: 100%;
+  height: 40px;
+  background-color: rgba(71, 156, 191, 1);
+  position: fixed;
+  top: 97px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 11;
+}
+
+.banner a {
+  color: white;
+}
+
+.banner p {
+  margin-bottom: 0px;
+}
+
 .category-page, .product-page {
   display: block;
 }
 
 .cart-page {
   position: static;
-  margin-top: 100px;
+  margin-top: 130px;
   padding-bottom: 70px;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 
 .product-info {
-  margin-top: 70px;
+  margin-top: 100px;
   margin-bottom: 100px;
   display: flex;
   justify-content: center;
@@ -302,7 +322,7 @@ button {
 }
 
 .filter {
-  margin-top: 70px;
+  margin-top: 100px;
   margin-bottom: 15px;
   display: flex;
   justify-content: center;
@@ -372,7 +392,7 @@ button {
 }
 
 .cart-form .name-container,.message-container,.email-container {
-  width: 300px;
+  width: 100%;
   margin-top: 30px;
   margin-bottom: 30px;
 }
